RESOLVED FIXED184790
Apply pointer profiling to Signal pointers.
https://bugs.webkit.org/show_bug.cgi?id=184790
Summary Apply pointer profiling to Signal pointers.
Mark Lam
Reported 2018-04-19 13:13:46 PDT
Attachments
proposed patch. (24.14 KB, patch)
2018-04-19 14:27 PDT, Mark Lam
msaboff: review+
patch for landing + GTK build fix. (24.47 KB, patch)
2018-04-19 14:47 PDT, Mark Lam
no flags
patch for landing + gtk build fix. (24.77 KB, patch)
2018-04-19 15:08 PDT, Mark Lam
no flags
patch for landing + GTK build fix. (24.96 KB, patch)
2018-04-19 15:19 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2018-04-19 14:27:05 PDT
Created attachment 338357 [details] proposed patch.
Michael Saboff
Comment 2 2018-04-19 14:40:31 PDT
Comment on attachment 338357 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=338357&action=review Fix the compilation error. r=me > Source/JavaScriptCore/ChangeLog:13 > + 3. Remove or fill in the item.
Mark Lam
Comment 3 2018-04-19 14:47:17 PDT
Created attachment 338360 [details] patch for landing + GTK build fix. Thanks for the review.
Mark Lam
Comment 4 2018-04-19 15:08:42 PDT
Created attachment 338365 [details] patch for landing + gtk build fix.
Mark Lam
Comment 5 2018-04-19 15:19:30 PDT
Created attachment 338367 [details] patch for landing + GTK build fix.
Mark Lam
Comment 6 2018-04-19 16:31:30 PDT
Mark Lam
Comment 7 2018-04-20 13:58:46 PDT
Build fix for internal build landed in r230852: <http://trac.webkit.org/r230852>.
Yusuke Suzuki
Comment 8 2018-05-02 03:06:10 PDT
Note You need to log in before you can comment on or make changes to this bug.